Give gallery-buttons higher opacity and fixed width, make them disappear on small screens, center them by using transform property, also center main gallery pictures with transform property

--- a/packages/vcl/theme/theme.scss
+++ b/packages/vcl/theme/theme.scss
@@ -577,7 +577,7 @@ $gallery-header-color: inherit !default;
 $gallery-header-bg-color: transparent !default;
 $gallery-footer-color: inherit !default;
 $gallery-footer-bg-color: transparent !default;
-$gallery-initial-buttons-opacity: 0.4 !default;
+$gallery-initial-buttons-opacity: 0.7 !default;
 $gallery-thumbnail-selected-border-color: $brand-accent-dark !default;
 $gallery-thumbnail-hover-bg-color: $brand-accent-overlay !default;
 
